@@ -1,1 +1,2 @@
 - Added the Form ID to the entry meta labels.
+- Updated Members 2.0 integration to use human readable labels for the capabilities. Requires Gravity Flow 1.8.1 or greater.
